commit on 'html fixed'

--- a/projects/01_fyyur/starter_code/templates/forms/new_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_artist.html
@@ -30,11 +30,11 @@
       </div>
       <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link, autofocus = true) }}
+          {{ form.facebook_link(class_ = 'form-control', placeholder='put facebook url',  autofocus = true) }}
         </div>
         <div class="form-group">
           <label for="image_link">Image Link</label>
-          {{ form.image_link(class_ = 'form-control', placeholder='put image url', id=form.image_link, autofocus = true) }}
+          {{ form.image_link(class_ = 'form-control', placeholder='put image url', autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
